# ComfyUI_AssetManager

./: .comfyignore  README.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
asset_browser/: __init__.py  database.py  metadata.py  routes.py  scanner.py
js/: asset_browser.js
tests/: test_metadata.py
